made insta clone

--- a/todo/templates/todo/currenttodos.html
+++ b/todo/templates/todo/currenttodos.html
@@ -4,9 +4,9 @@
     <div class="row justify-content-center mt-5">
         <div class="col-md-10">
             {% if todos %}
-                 <h1>{{ todos.count }} Current Todo{{ todos.count|pluralize }}</h1>
+                 <h1>You have made {{ todos.count }} Post{{ todos.count|pluralize }}</h1>
             {% else %}
-                           <h1>Current Todos</h1>
+                           <h1>Your Posts</h1>
             {% endif %}
         </div>
     </div>
@@ -15,14 +15,14 @@
         {% if todos %}
             <div class="list-group">
                 {% for todo in todos %}
-                    <a href="{% url 'viewtodo' todo.id %}" class="list-group-item list-group-item-action{% if todo.important %} list-group-item-danger{% endif %}"><b>{{ todo.title }}</b>{% if todo.memo %} - {{ todo.memo|truncatechars:30 }}{% endif %}</a>
+                    <a href="{% url 'viewtodo' todo.id %}" class="list-group-item list-group-item-action{% if todo.datecompleted is not None %} list-group-item-success{% endif %}"><b>{{ todo.title }}</b>{% if todo.memo %} - {{ todo.memo|truncatechars:30 }}{% endif %}</a>
                 {% endfor %}
             </div>
         {% else %}
             <div class="text-center">
-                <h2>Looks like you don't have any todos! Nice work.</h2>
+                <h2>You haven't posted anything yet.</h2>
             <br>
-            <a role="button" class="btn btn-primary" href="{% url 'createtodo' %}">New Todo</a>
+            <a role="button" class="btn btn-primary" href="{% url 'createtodo' %}">Create a Post</a>
             </div>
         {% endif %}
         </div>
