--- a/todo/templates/todo/createtodo.html
+++ b/todo/templates/todo/createtodo.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="row justify-content-center mt-5">
         <div class="col-md-5">
-            <h2>New Todo</h2>
+            <h2>Create a New Post</h2>
         </div>
     </div>
     <div class="row justify-content-center mt-5">
@@ -20,14 +20,14 @@
                     <input type="text" name="title" class="form-control" id="title" required>
                 </div>
                 <div class="form-group">
-                    <label for="memo">Memo</label>
+                    <label for="memo">Description</label>
                     <textarea name="memo" class="form-control" id="memo" ></textarea>
                 </div>
                 <div class="form-group form-check">
-                    <input type="checkbox" name="important" class="form-check-input" id="important">
-                    <label class="form-check-label" for="important">Important</label>
+                    
+                    
                 </div>
-                <button type="submit" class="btn btn-primary">Save</button>
+                <button type="submit" class="btn btn-primary">Create Post</button>
             </form>
         </div>
     </div>
