--- a/todo/templates/todo/home.html
+++ b/todo/templates/todo/home.html
@@ -3,15 +3,18 @@
 {% block content %}
 <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
+   
 <div class="row justify-content-center mt-5">
         <div class="col-md-7 text-center">
-
-                 <h1>Simply Your Todos. Woo!</h1>
-            <p>Life is fun. But life is also busy. There's a million different things you could be doing. But what matters is <u>what</u> you do. We created <b><i>Todo Woo</i></b> to help you make sense of all of your opportunities and live that life that matters most to you. Your new organized life awaits.</p>
+                 <h1>Insta Clone by Kyle</h1>
+                 <br>
+            <p>This web app has user authentication and authorization. Users can create, edit/update, like/dislike, and delete posts. 
+                This code is based on a previous mini project I made about a year ago.
+                <br><br>
+                Limitations: Users cannot see other users' posts or interact with them. No images.
+                
+            </p>
+            <br>
         <a role="button" class="btn btn-primary btn-lg" href="{% url 'signupuser' %}">Start</a>
         </div>
     </div>
